# stat386-spotify-project

./: AppDataCleanup.ipynb  ArtistCSV.ipynb  app.py  app_artists.csv  github_data_ts.ipynb  main.py  pyproject.toml  tutorial.qmd
spotify_tools/: __init__.py  analysis.py  clean.py
